web/src/app/components/pot-card/pot-card.component.scss
.post-card {
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 100px;
    height: 100px;
    width: 100%;
    background-color: #FFF;
    border-radius: 5px;
    margin: 20px 0;
    padding: 0 30px;
    box-shadow: 0px 1px 4px #E5E9F2;
    transition: 0.3s;

    &:hover {
        transition: box-shadow 0.3s;
        box-shadow: 0px 1px 4px #b7bac2;
    }

    .pc-name {
        flex: 1;
    }

    .pc-stats {
        display: flex;
        justify-content: space-around;

        flex: 1;

        .pcs-stat {
            display: flex;
            justify-content: space-around;
            align-items: center;

            i {
                font-weight: 600;
                font-size: 1.5rem;
            }

            span {
                font-size: 1.2rem;
            }
        }
    }
}

